--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,8 @@
 @import "blocks/main-blocks/contacts";
 @import "blocks/main-blocks/competition-form";
 @import "blocks/main-blocks/map";
+@import "blocks/main-blocks/modal";
+
 
 @import "blocks/main-blocks/gallery";
 @import "blocks/main-blocks/photo-constructor";
