--- a/sass/blocks/header-blocks/page-header.scss
+++ b/sass/blocks/header-blocks/page-header.scss
@@ -3,7 +3,7 @@
   color: $white;
   display: flex;
   flex-direction: column;
-  background: $bg-light-blue url("../img/bg-back-mobile@1x.jpg") top no-repeat;
+  background: $bg-light-blue url("../img/bg-back-mobile@1x.jpg") bottom no-repeat;
   position: relative;
 
   &__page-name {
@@ -48,27 +48,30 @@
   @media #{$tablet} {
     align-items: flex-start;
     background: none;
-    background: $bg-light-blue url("../img/bg-back-tablet@1x.jpg") top no-repeat;
+    background: $bg-light-blue url("../img/bg-back-tablet@1x.jpg") bottom no-repeat;
   }
   @media #{$desktop} {
-    background: $bg-light-blue url("../img/bg-back-desktop@1x.jpg") top no-repeat;
+    background: $bg-light-blue url("../img/bg-back-desktop@1x.jpg") bottom no-repeat;
   }
 
   &--clean {
-    background: url("../img/iphone-hand-mobile@1x.png") 50% 40% no-repeat,
-                        $bg-light-blue url("../img/bg-back-mobile@1x.jpg") top no-repeat;
+    min-height: 460px;
+    background: url("../img/iphone-hand-mobile@1x.png") 50% 101% no-repeat,
+                        $bg-light-blue url("../img/bg-back-mobile@1x.jpg") bottom no-repeat;
 
-  @media #{$tablet} {
-    align-items: flex-start;
-    background: none;
-    background: url("../img/iphone-hand-tablet@1x.png") 50% 100% no-repeat,
-                         $bg-light-blue url("../img/bg-back-tablet@1x.jpg") top no-repeat;
-  }
-  @media #{$desktop} {
-    align-items: flex-start;
-    background: none;
-    background: url("../img/iphone-hand-desktop@1x.png") 50% 100% no-repeat,
-                         $bg-light-blue url("../img/bg-back-desktop@1x.jpg") top no-repeat;
-  }
+      @media #{$tablet} {
+        min-height: 730px;
+        align-items: flex-start;
+        background: none;
+        background: url("../img/iphone-hand-tablet@1x.png") 50% 100% no-repeat,
+                             $bg-light-blue url("../img/bg-back-tablet@1x.jpg") bottom no-repeat;
+      }
+      @media #{$desktop} {
+        min-height: 853px;
+        align-items: flex-start;
+        background: none;
+        background: url("../img/iphone-hand-desktop@1x.png") 50% 100% no-repeat,
+                             $bg-light-blue url("../img/bg-back-desktop@1x.jpg") bottom no-repeat;
+      }
   }
 }
