--- a/sass/global/fonts.scss
+++ b/sass/global/fonts.scss
@@ -1,19 +1,19 @@
 @font-face {
-  font-family: "OpenSans", "Arial", sans-serif;
+  font-family: "OpenSans";
   src: url("../fonts/opensans.woff") format("woff"),
        url("../fonts/opensans.woff2") format("woff2");
   font-weight: normal;
 }
 
 @font-face {
-  font-family: "OpenSans", "Arial", sans-serif;
+  font-family: "OpenSans";
   src: url("../fonts/opensansbold.woff") format("woff"),
        url("../fonts/opensansbold.woff2") format("woff2");
   font-weight: bold;
 }
 
 @font-face {
-  font-family: "OpenSans", "Arial", sans-serif;
+  font-family: "OpenSans";
   src: url("../fonts/opensanslight.woff"),
        url("../fonts/opensanslight.woff2");
   font-weight: 300;
