--- a/sass/blocks/header-blocks/page-header.scss
+++ b/sass/blocks/header-blocks/page-header.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   background: $bg-light-blue url("../img/bg-back-mobile@1x.jpg") bottom no-repeat;
+  background-position: center 140px;
   position: relative;
 
   &__page-name {
@@ -45,33 +46,73 @@
     }
   }
 
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background: url("../img/bg-back-mobile@2x.jpg") bottom no-repeat;
+      background-size: 1200px auto;
+      background-position: center -50px;
+  }
+
   @media #{$tablet} {
     align-items: flex-start;
     background: none;
     background: $bg-light-blue url("../img/bg-back-tablet@1x.jpg") bottom no-repeat;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      align-items: flex-start;
+      background: none;
+      background: url("../img/bg-back-tablet@2x.jpg") bottom no-repeat;
+    }
   }
   @media #{$desktop} {
     background: $bg-light-blue url("../img/bg-back-desktop@1x.jpg") bottom no-repeat;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background: url("../img/bg-back-desktop@2x.jpg") bottom no-repeat;
+    }
   }
 
   &--clean {
-    min-height: 460px;
-    background: url("../img/iphone-hand-mobile@1x.png") 50% 101% no-repeat,
+    min-height: 462px;
+    background: url("../img/iphone-hand-mobile@1x.png") 0% 101% no-repeat,
                         $bg-light-blue url("../img/bg-back-mobile@1x.jpg") bottom no-repeat;
 
-      @media #{$tablet} {
+    @media #{$retina} {
+      background: url("../img/iphone-hand-mobile@2x.png") 0% 101% no-repeat,
+                          $bg-light-blue url("../img/bg-back-mobile@2x.jpg") bottom no-repeat;
+      background-size: 258px auto, 800px auto;
+    }
+
+    @media #{$tablet} {
         min-height: 730px;
         align-items: flex-start;
         background: none;
         background: url("../img/iphone-hand-tablet@1x.png") 50% 100% no-repeat,
                              $bg-light-blue url("../img/bg-back-tablet@1x.jpg") bottom no-repeat;
-      }
-      @media #{$desktop} {
+
+        @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+            min-height: 730px;
+            align-items: flex-start;
+            background: none;
+            background: url("../img/iphone-hand-tablet@2x.png") 50% 100% no-repeat,
+                               $bg-light-blue url("../img/bg-back-tablet@2x.jpg") bottom no-repeat;
+        }
+    }
+
+    @media #{$desktop} {
         min-height: 853px;
         align-items: flex-start;
         background: none;
         background: url("../img/iphone-hand-desktop@1x.png") 50% 100% no-repeat,
                              $bg-light-blue url("../img/bg-back-desktop@1x.jpg") bottom no-repeat;
-      }
+
+         @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+             min-height: 853px;
+             align-items: flex-start;
+             background: none;
+             background: url("../img/iphone-hand-desktop@2x.png") 50% 100% no-repeat,
+                                $bg-light-blue url("../img/bg-back-desktop@2x.jpg") bottom no-repeat;
+         }
+    }
+
   }
 }
