--- a/sass/blocks/main-blocks/services-package.scss
+++ b/sass/blocks/main-blocks/services-package.scss
@@ -5,7 +5,7 @@
   padding: 91px 5% 36px;
 
   @media #{$tablet} {
-    padding: 90px 5% 70px;
+    padding: 90px 5% 73px;
   }
 
   @media #{$desktop} {
@@ -83,6 +83,10 @@
 
   h3 {
       font-size: 18px;
+
+      @media #{$tablet} {
+        font-size: 16px;
+      }
   }
 
   &--hit::before  {
@@ -135,7 +139,7 @@
 
   @media #{$tablet} {
     font-size: 14px;
-    padding: 15px 0px;
+    padding: 12px 0px 6px;
   }
 
   @media #{$desktop} {
@@ -171,8 +175,8 @@
     box-shadow: none;
 
     @media #{$tablet} {
-      top: 10px;
-      right: 55px;
+        top: 5px;
+        right: 60px;
     }
     @media #{$desktop} {
       top: 15px;
@@ -213,7 +217,7 @@
 
   @media #{$tablet} {
     min-height: 45px;
-    padding: 6px 15px;
+    padding: 6px 18px;
     vertical-align: middle;
     box-sizing: border-box;
   }
