--- a/sass/blocks/footer-blocks/social-links.scss
+++ b/sass/blocks/footer-blocks/social-links.scss
@@ -5,6 +5,10 @@
     margin-left: -18px;
   }
 
+  @media #{$desktop} {
+    margin-left: 10px;
+  }
+
   @media #{$mobile-only} {
     margin-bottom: 32px;
   }
