--- a/sass/blocks/header-blocks/main-nav.scss
+++ b/sass/blocks/header-blocks/main-nav.scss
@@ -12,7 +12,7 @@
     justify-content: space-between;
     width: 100%;
     max-width: 940px;
-    padding: 0 20px;
+    padding: 0;
     margin: auto;
     box-sizing: border-box;
   }
@@ -30,7 +30,7 @@
   }
 
   @media #{$desktop} {
-    padding: 44px 0px;
+    padding: 40px 0px;
   }
 }
 
@@ -132,7 +132,7 @@
 
   @media #{$desktop} {
     flex-direction: row;
-    min-width: 60%;
+    min-width: 70%;
   }
 }
 
