--- a/sass/blocks/header-blocks/page-header.scss
+++ b/sass/blocks/header-blocks/page-header.scss
@@ -9,7 +9,6 @@
 
   &__page-name {
     text-align: center;
-    // margin: 100px auto 50px;
     line-height: 1.25;
     font-size: 24px;
     width: 250px;
@@ -103,15 +102,16 @@
         min-height: 853px;
         align-items: flex-start;
         background: none;
-        background: url("../img/iphone-hand-desktop@1x.png") 50% 100% no-repeat,
+        background: url("../img/iphone-hand-desktop@1x.png") 98% 100% no-repeat,
                              $bg-light-blue url("../img/bg-back-desktop@1x.jpg") bottom no-repeat;
 
          @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
              min-height: 853px;
              align-items: flex-start;
              background: none;
-             background: url("../img/iphone-hand-desktop@2x.png") 50% 100% no-repeat,
+             background: url("../img/iphone-hand-desktop@2x.png") 98% 100% no-repeat,
                                 $bg-light-blue url("../img/bg-back-desktop@2x.jpg") bottom no-repeat;
+             background-size: 1050px auto, 2560px auto;
          }
     }
 
