--- a/sass/blocks/main-blocks/contacts.scss
+++ b/sass/blocks/main-blocks/contacts.scss
@@ -11,24 +11,26 @@
   }
 
   @media #{$desktop} {
-    padding: 74px 5% 25px;
+    padding: 60px 0 8px;
   }
 }
 
 .contacts__slogan {
   font-size: 24px;
   line-height: 1.3;
-  margin: 0 auto 35px;
+  margin-bottom: 35px;
   font-weight: 300;
 
   @media #{$tablet} {
     font-size: 40px;
-    margin: 0 auto 41px;
+    padding: 0 90px;
+    margin-bottom: 41px;
   }
 
   @media #{$desktop} {
     font-size: 50px;
-    margin: 0 auto 65px;
+    margin-bottom: 52px;
+    padding: 0 120px;
   }
 }
 
@@ -86,6 +88,7 @@
 
   @media #{$desktop} {
     margin-top: 0px;
+    max-width: 300px;
   }
 
   &--email {
