--- a/sass/blocks/main-blocks/index-page-intro.scss
+++ b/sass/blocks/main-blocks/index-page-intro.scss
@@ -2,11 +2,21 @@
   display: flex;
   flex-direction: column;
   padding: 0 20px;
+  padding-top: 43px;
+
+  @media #{$tablet} {
+    padding-top: 50px;
+    padding-bottom: 45px;
+  }
+
+  @media #{$desktop} {
+    padding-top: 67px;
+    padding-bottom: 78px;
+  }
 }
 
 .index-page-intro__slogan {
   margin: auto;
-  margin-top: 43px;
   font-size: 24px;
   line-height: 1.2;
   background-color: $white;
@@ -15,12 +25,10 @@
 
   @media #{$tablet} {
     font-size: 40px;
-    margin-top: 50px;
   }
 
   @media #{$desktop} {
     font-size: 50px;
-    margin-top: 78px;
   }
 
   &--phrase2 {
@@ -28,11 +36,7 @@
 
   @media #{$tablet} {
     width: 60%;
-    margin: 0px auto 45px;
-    }
-
-  @media #{$desktop} {
-    margin-bottom: 78px;
+    margin: 0px auto;
     }
   }
 }
