--- a/sass/blocks/footer-blocks/page-footer.scss
+++ b/sass/blocks/footer-blocks/page-footer.scss
@@ -66,7 +66,6 @@
   }
 
   @media #{$desktop} {
-      margin-right: 4px;
       margin-top: 8px;
   }
 }
@@ -75,6 +74,7 @@
   width: 30px;
   height: 35px;
   margin-left: 10px;
+  margin-top: 6px;
 }
 
 @media #{$mobile-only} {
@@ -83,9 +83,9 @@
   }
   .page-footer {
       flex-direction: column;
-      padding: 35px 10px;
+      padding: 39px 10px;
   }
   .page-footer__app-logo {
-      margin-bottom: 35px;
+      margin-bottom: 31px;
   }
 }
