--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,6 +20,7 @@
 
 
 @import "blocks/main-blocks/gallery";
+@import "blocks/main-blocks/gallery-slogan";
 @import "blocks/main-blocks/photo-constructor";
 
 @import "blocks/footer-blocks/page-footer";
