--- a/sass/blocks/main-blocks/british-fact.scss
+++ b/sass/blocks/main-blocks/british-fact.scss
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: flex-end;
   background: url(../img/research-bgr.svg) 4px -41px no-repeat;
-  background-size: 243px 125%;
+  background-size: 241px 357px;
   width: 100%;
 
   @media #{$desktop} {
