--- a/sass/blocks/header-blocks/page-header.scss
+++ b/sass/blocks/header-blocks/page-header.scss
@@ -36,7 +36,7 @@
             width: 400px;
         }
         @media #{$desktop} {
-            margin: 180px auto 100px;
+            margin: 171px auto 99px;
         }
     }
 
@@ -69,6 +69,8 @@
 
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       background: url("../img/bg-back-desktop@2x.jpg") bottom no-repeat;
+      background-size: 2550px auto;
+      background-position: center 13px;
     }
   }
 
