--- a/sass/blocks/main-blocks/features.scss
+++ b/sass/blocks/main-blocks/features.scss
@@ -14,7 +14,7 @@
   @media #{$tablet} {
     flex-direction: row-reverse;
     justify-content: space-between;
-    padding: 0px 5% 0px;
+    padding: 0px 15px 0px;
   }
 
   @media #{$desktop} {
