--- a/sass/blocks/main-blocks/services-package.scss
+++ b/sass/blocks/main-blocks/services-package.scss
@@ -5,7 +5,8 @@
   padding: 91px 5% 36px;
 
   @media #{$tablet} {
-    padding: 90px 5% 73px;
+    padding: 97px 20px 73px;
+    background-size: 135% auto;
   }
 
   @media #{$desktop} {
