--- a/sass/blocks/main-blocks/services-package.scss
+++ b/sass/blocks/main-blocks/services-package.scss
@@ -10,7 +10,8 @@
   }
 
   @media #{$desktop} {
-    padding: 151px 5% 96px;
+    padding: 151px 10px 96px;
+    background-size: 130% auto;
   }
 }
 
