--- a/sass/blocks/main-blocks/gallery-slogan.scss
+++ b/sass/blocks/main-blocks/gallery-slogan.scss
@@ -28,4 +28,8 @@
     .gallery-slogan--top {
         padding: 92px 170px 88px;
     }
+
+    .gallery-slogan--bottom {
+        padding: 7px 40px 66px;
+    }
 }
