add pp for form

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,6 +17,7 @@
 @import "blocks/main-blocks/competition-form";
 @import "blocks/main-blocks/map";
 @import "blocks/main-blocks/modal";
+@import "blocks/main-blocks/head-rule";
 
 
 @import "blocks/main-blocks/gallery";
