--- a/sass/blocks/main-blocks/competition-form.scss
+++ b/sass/blocks/main-blocks/competition-form.scss
@@ -22,34 +22,6 @@
   }
 }
 
-.head-rule__content {
-  font-size: 14px;
-  line-height: 30px;
-  color: $light-blue;
-  text-align: center;
-  padding: 45px 0 10px;
-  box-sizing: border-box;
-
-  @media #{$tablet} {
-    width: auto;
-    font-size: 18px;
-    padding: 95px 60px 65px;
-    order: 1;
-  }
-
-  @media #{$desktop} {
-      padding: 95px 90px 65px;
-  }
-}
-
-.head-rule__ask {
-  display: none;
-
-  @media #{$tablet} {
-    display: inline;
-  }
-}
-
 .competition-form__block {
   display: flex;
   flex-direction: column;
@@ -79,6 +51,7 @@
   color: $pink;
   text-align: left;
   margin-left: 20px;
+  margin-bottom: 3px;
 
   &--other-view {
     display: none;
@@ -95,8 +68,8 @@
   line-height: 30px;
   padding: 0 20px;
   flex-grow: 1;
-  margin-bottom: 20px;
-  height: 65px;
+  margin-bottom: 18px;
+  height: 60px;
   border: 2px solid $border-grey;
 }
 
@@ -185,17 +158,17 @@
   font-size: 18px;
   line-height: 30px;
   margin-bottom: 22px;
-  padding: 15px 0 15px 65px;
+  padding: 15px 0 15px 68px;
   cursor: pointer;
   position: relative;
 }
 
 .competition-form__block--2 {
-  padding: 35px 0 20px;
+  padding: 37px 0 10px;
   background-color: $bg-grey;
 
   .competition-form__block-header {
-    margin-bottom: 35px;
+    margin-bottom: 28px;
   }
 
   .competition-form__label-right {
@@ -203,9 +176,9 @@
       content: "";
       position: absolute;
       left: 0;
-      top: 10px;
-      width: 40px;
-      height: 40px;
+      top: 11px;
+      width: 35px;
+      height: 35px;
       border: 2px solid $border-grey;
       background: $white;
     }
@@ -258,7 +231,7 @@
 }
 
 .competition-form__block--3 {
-  padding: 25px 0 35px;
+  padding: 33px 0 26px;
 
   .competition-form__block-header {
     display: none;
@@ -267,6 +240,10 @@
   .competition-form__label-up--other-view,
   .competition-form__text-input--other-view {
     display: none;
+  }
+
+  .competition-form__label-up {
+      margin-bottom: 6px;
   }
 
   @media #{$tablet} {
@@ -348,8 +325,7 @@
 }
 
 .competition-form__block--4 {
-  padding: 35px 20px 40px;
-  margin-bottom: 55px;
+  padding: 38px 20px 17px;
   background-color: $bg-grey;
 
   .competition-form__label-right {
@@ -358,10 +334,10 @@
     &::before {
       content: "";
       position: absolute;
-      left: -5px;
-      top: 8px;
-      width: 36px;
-      height: 36px;
+      left: 0px;
+      top: 11px;
+      width: 35px;
+      height: 35px;
       border: 2px solid $border-grey;
       background: $white;
       border-radius: 50%;
@@ -369,20 +345,20 @@
   }
 
   .competition-form__block-header {
-    margin-bottom: 35px;
+    margin-bottom: 24px;
     padding: 0 24px;
   }
 
   .competition-form__radio:checked + .competition-form__label-right {
     &::after {
-      content: "";
-      width: 0;
-      height: 0;
-      border: 8px solid $pink;
-      border-radius: 50%;
-      position: absolute;
-      top: 20px;
-      left: 7px;
+        content: "";
+        width: 0;
+        height: 0;
+        border: 8px solid #d22856;
+        border-radius: 50%;
+        position: absolute;
+        top: 23px;
+        left: 12px;
     }
   }
 
@@ -412,7 +388,7 @@
 }
 
 .competition-form__block--5 {
-    padding-bottom: 40px;
+    padding: 40px 0 44px;
 
   .competition-form__block-header {
     margin-bottom: 15px;
@@ -421,9 +397,10 @@
   textarea {
     font-size: 18px;
     line-height: 30px;
-    padding: 15px;
+    padding: 16px 18px;
     resize: vertical;
     border: 2px solid $border-grey;
+    min-height: 168px;
   }
 
   @media #{$tablet} {
@@ -461,6 +438,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  padding-bottom: 16px;
 
   @media #{$tablet} {
       order: 7;
@@ -486,7 +464,7 @@
   line-height: 30px;
   color: $white;
   text-transform: uppercase;
-  padding: 15px;
+  padding: 16px;
   border-radius: 2px;
   text-align: center;
   margin-bottom: 35px;
