--- a/sass/blocks/main-blocks/competition-form.scss
+++ b/sass/blocks/main-blocks/competition-form.scss
@@ -20,6 +20,10 @@
   @media #{$tablet} {
     padding: 0 20px;
   }
+
+  @media #{$desktop} {
+    padding: 0 10px;
+  }
 }
 
 .competition-form__block {
@@ -41,6 +45,8 @@
     width: 100%;
     flex-direction: row;
     align-items: baseline;
+    margin-bottom: 33px;
+    position: relative;
   }
 }
 
@@ -80,7 +86,7 @@
 
   @media #{$tablet} {
     order: 2;
-    padding: 25px 0;
+    padding: 25px 0 15px;
   }
   @media #{$desktop} {
     width: 46%;
@@ -88,7 +94,7 @@
     padding-top: 21px;
     padding-bottom: 0;
     margin-top: -20px;
-    margin-bottom: 55px;
+    margin-bottom: 65px;
     justify-content: space-between;
 
     .competition-form__text-input {
@@ -202,30 +208,43 @@
     background: $white;
     order: 5;
     border: 2px solid $border-grey;
-    padding: 50px 60px 22px;
-    margin-bottom: 58px;
+    padding: 41px 48px 17px;
+    margin-bottom: 63px;
 
     .competition-form__block-header {
         width: auto;
         margin: 0 auto;
-        margin-top: -59px;
-        margin-bottom: 41px;
+        margin-top: -51px;
+        margin-bottom: 33px;
         background-color: $white;
+        padding: 0 32px;
     }
 
     .competition-form__block-wrapper {
         width: auto;
         margin: 0;
     }
+
+    .competition-form__label-right {
+      &::before {
+          left: 9px;
+      }
+    }
+
+    .competition-form__checkbox:checked + .competition-form__label-right {
+      &::after {
+         left: 17px;
+      }
+    }
   }
   @media #{$desktop} {
+    max-height: 230px;
+    padding: 41px 0px 20px 47px;
+
     .competition-form__block-wrapper {
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: wrap;
         justify-content: space-between;
-    }
-    .competition-form__checkbox-wrapper {
-        width: 265px;
     }
   }
 }
@@ -249,48 +268,53 @@
   @media #{$tablet} {
     order: 4;
     border: 2px solid $border-grey;
-    padding: 30px 60px;
-    margin-bottom: 55px;
+    padding: 33px 58px 21px;
+    margin-bottom: 65px;
 
     .competition-form__block-header {
       display: inline-block;
-      margin-top: -39px;
-      margin-bottom: 35px;
+      margin-top: -43px;
+      margin-bottom: 39px;
       background: $white;
       width: auto;
       padding: 0 25px;
     }
 
-    .competition-form__label-up--mobile-view,
-    .competition-form__text-input--mobile-view {
-      display: none;
+    .competition-form__label-up {
+        padding-left: 18px;
     }
 
-    .competition-form__label-up--other-view,
-    .competition-form__text-input--other-view {
-      display: inline-block;
-      flex-grow: 1;
-      width: auto;
+    .contest-form__text-input-wrapper--mail .competition-form__text-input,
+    .contest-form__text-input-wrapper--phone .competition-form__text-input {
+        padding-right: 75px;
+        margin-bottom: 11px;
     }
 
     .contest-form__text-input-wrapper--mail,
     .contest-form__text-input-wrapper--phone {
-      flex-direction: column;
+      flex-direction: column-reverse;
       box-sizing: border-box;
     }
 
+    .contest-form__text-input-wrapper--mail {
+        margin-bottom: 0px;
+    }
+
     .contest-form__text-input-wrapper--phone {
-      margin-bottom: 35px;
+      margin-bottom: 24px;
     }
 
     .competition-form__input-wrapper {
         width: 100%;
-        display: flex;
+        display: none;
     }
 
     .competition-form__input-decor {
         width: 60px;
-        height: 65px;
+        height: 58px;
+        position: absolute;
+        top: 0;
+        right: 0;
     }
 
     .competition-form__input-decor--phone {
@@ -302,6 +326,8 @@
     }
   }
   @media #{$desktop} {
+    padding: 28px 58px 9px;
+
     .contest-form__text-input-wrapper--phone {
         width: 376px;
         margin: 0;
@@ -309,8 +335,25 @@
     .contest-form__text-input-wrapper--mail {
         width: 376px;
         margin-right: 0px;
-        margin-top: -110px;
+        margin-top: -108px;
     }
+
+    .competition-form__block-header {
+        margin-top: -40px;
+        margin-bottom: 37px;
+    }
+
+    // .competition-form__label-up--mobile-view,
+    // .competition-form__text-input--mobile-view {
+    //   display: none;
+    // }
+
+    // .competition-form__label-up--other-view,
+    // .competition-form__text-input--other-view {
+    //   display: inline-block;
+    //   flex-grow: 1;
+    //   width: auto;
+    // }
   }
 }
 
@@ -342,6 +385,10 @@
       background: $white;
       border-radius: 50%;
     }
+
+    @media #{$tablet} {
+        padding: 15px 0 14px 58px;
+    }
   }
 
   .competition-form__block-header {
@@ -367,6 +414,7 @@
     order: 3;
     border: 2px solid $border-grey;
     padding: 35px 60px 30px;
+    margin-bottom: 65px;
 
     .competition-form__block-header {
       margin-top: -45px;
@@ -384,6 +432,13 @@
   @media #{$desktop} {
     width: 46%;
     margin-right: 0;
+    padding: 35px 70px 30px;
+
+    .competition-form__block-header {
+        margin-left: -20px;
+        width: 112%;
+        padding: 0;
+    }
   }
 }
 
@@ -422,12 +477,15 @@
     }
 
     textarea {
-        padding: 10px 20px;
+        padding: 15px 20px 8px;
     }
 
     @media #{$desktop} {
+        padding: 45px 60px 45px;
+        margin-bottom: 62px;
+
         textarea {
-            height: 125px;
+            min-height: 101px;
         }
     }
   }
@@ -445,7 +503,7 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: baseline;
-      margin-bottom: 45px;
+      margin-bottom: 32px;
       max-width: 940px;
       width: 100%;
 
@@ -454,6 +512,10 @@
         padding: 18px 60px;
         margin: 0;
     }
+  }
+
+  @media #{$desktop} {
+      margin-bottom: 0;
   }
 }
 
