--- a/sass/blocks/header-blocks/page-header.scss
+++ b/sass/blocks/header-blocks/page-header.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   background: $bg-light-blue url("../img/bg-back-mobile@1x.jpg") bottom no-repeat;
-  background-position: center 140px;
   position: relative;
 
   &__page-name {
@@ -48,7 +47,7 @@
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       background: url("../img/bg-back-mobile@2x.jpg") bottom no-repeat;
       background-size: 700px auto;
-      background-position: center -2px;
+      background-position: center bottom;
   }
 
   @media #{$tablet} {
@@ -61,7 +60,7 @@
       background: none;
       background: url("../img/bg-back-tablet@2x.jpg") bottom no-repeat;
       background-size: 1200px auto;
-      background-position: center -2px;
+      background-position: center bottom;
     }
   }
   @media #{$desktop} {
